[package]
name = "fry-common"
version = "0.1.0"
edition = "2021"
license = "MIT-Festival"

[dependencies]
lazy-regex = { version = "3.1.0", git = "https://github.com/TTWNO/lazy-regex/", branch = "no-std-support", default-features = false, features = ["regex"] }

[features]
default = ["std"]
std = ["lazy-regex/default"]
critical-section = ["lazy-regex/critical-section"]
