[package]
name = "fry-en-us"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"
license = "MIT-Festival"
repository = "https://github.com/TTWNO/fry2/"
readme = "README.md"
keywords = ["tts"]
categories = ["tts"]
description = "English (US) grammar rules used for Fry, the embedded text-to-speech engine."

[dependencies]
fry-common = { version = "0.1.0", path = "../fry-common/", default-features = false }
const_panic = { version = "0.2.8", git = "https://github.com/TTWNO/const_panic/", branch = "main", default-features = false, features = ["derive"] }
derive_more = { version = "1.0.0", default-features = false, features = ["display", "error", "from"] }

[features]
std = ["fry-common/std", "derive_more/std"]
