[package]
name = "fry-en-us"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"
license = "MIT-Festival"
repository = "https://github.com/TTWNO/fry2/"
readme = "README.md"
keywords = ["tts"]
categories = ["tts"]
description = "English (US) grammar rules used for Fry, the embedded text-to-speech engine."

[dependencies]
fry-common = { version = "0.1.0", path = "../fry-common/", default-features = false }
const_panic = { version = "0.2.9", default-features = false, features = ["derive"] }
tracing = { version = "0.1.40", default-features = false }
